// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`atMost '' conditional success tests AST matches snapshot 1`] = `[]`;

exports[`atMost 'a' conditional success tests AST matches snapshot 1`] = `
[
  "a",
]
`;

exports[`atMost 'aa' conditional success tests AST matches snapshot 1`] = `
[
  "a",
  "a",
]
`;

exports[`atMost 'aaa' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "eof",
  ],
  "pos": 2,
}
`;

exports[`atMost 'abaa' conditional failure tests Error matches snapshot 1`] = `
{
  "expected": [
    "'a'",
    "eof",
  ],
  "pos": 1,
}
`;
